# TONENET

./: .gitignore  README.md  config.json  config.yaml  pyproject.toml  requirements.txt
.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compat_pickle.data.json  _compat_pickle.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  (+234 more)
examples/: basic_usage.py  duplex_demo.py  duplex_full.py
tests/: conftest.py  test_codec_invariants.py
tonenet/: __init__.py  audio.py  audio_io.py  controller.py  decoder.py  deployment.py  duplex_runner.py  encoder.py  export.py  identity.py  improve.py  ledger.py  memory.py  mesh.py  mic_stream.py  orchestrator.py  orchestrator_api.py  planner.py  realtime_agent.py  realtime_duplex.py  reasoner.py  replay.py  streaming.py  stt.py  stt_whisper.py  text_chunker.py  token_lm.py  tokens.py  train_lm.py  trainer.py  tts.py  tts_backend.py  vad.py  watermark.py
web/: package-lock.json  package.json
(+3465 files in other folders)
